overflow fixed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,12 +14,13 @@
   margin: 0px;
   box-sizing: border-box;
   font-family: 'Oswald', sans-serif;
+  /* outline: 2px solid black; */
 }
 
 /*  For the navigation menu */
 
 nav{
-  width: 100vw;
+  /* width: 100vw; */
   height: 64px;
   display: flex;
   justify-content: space-between;
@@ -101,7 +102,7 @@ nav{
 
 /*  For the Home Components */
 .home{
-  width: 100vw;
+  /* width: 100vw; */
   height: 89vh;
   overflow: hidden;
   display: flex;
@@ -194,7 +195,7 @@ nav{
 
 /* For the Questions Component */
 .questions{
-  width: 100vw;
+  /* width: 100vw; */
   height: 90vh;
   overflow-y: auto;
   padding: 40px;
@@ -228,7 +229,7 @@ nav{
 
 /* for the register page */
 .register{
-  width: 100vw;
+  /* width: 100vw; */
   height: 90vh;
   background-color: var(--white);
   display: flex;
@@ -299,7 +300,7 @@ nav{
 
 /* For the Login Page */
 .login{
-  width: 100vw;
+  /* width: 100vw; */
   height: 90vh;
   background-color: var(--white);
   display: flex;
@@ -396,7 +397,7 @@ nav{
 
 /* for the footer */
 .footer{
-  width: 100vw;
+  /* width: 100vw; */
   text-align: center;
   display: flex;
   justify-content: center;
